# plugin-test

just-some-project/: CHANGELOG.md  LICENSE  just-some-project.cabal
just-some-project/app/: Main.hs
plugin/: plugin.cabal
plugin/src/: APlugin.hs
