cabal-version:      3.0
name:               just-some-project
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jakob Bruenker
maintainer:         jakob.bruenker@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable just-some-project
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.16.0.0 && < 4.17.0.0,
                      plugin,
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:      -fplugin=APlugin -Wall
