cabal-version:      2.4

name:               plugin

version:            0.1.0.0

synopsis:           test project

description:        Just a test project

license:            MIT

author:             Jakob Brünker

maintainer:         jakob.bruenker@gmail.com

category:           Development

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  APlugin

    other-extensions: ScopedTypeVariables,
                      BlockArguments,
                      LambdaCase,
                      GADTs,
                      RecordWildCards,
                      OverloadedRecordDot,
                      NoFieldSelectors,
                      ViewPatterns,
                      StrictData,
                      PatternSynonyms

    build-depends:    base >=4.16.0.0 && < 4.17.0.0,
                      ghc >= 9.2,

    hs-source-dirs:   src

    default-language: GHC2021

    ghc-options:      -Wall -Wcompat
